--- a/deploy/csi-image-csidriverinfo.yaml
+++ b/deploy/csi-image-csidriverinfo.yaml
@@ -1,7 +1,7 @@
 apiVersion: storage.k8s.io/v1beta1
 kind: CSIDriver
 metadata:
-  name: image.csi.k8s.io
+  name: image2.csi.k8s.io
 spec:
   attachRequired: false
   podInfoOnMount: true
