--- a/deploy/csi-image-csidriverinfo.yaml
+++ b/deploy/csi-image-csidriverinfo.yaml
@@ -1,9 +1,9 @@
 apiVersion: storage.k8s.io/v1beta1
 kind: CSIDriver
 metadata:
-  name: image.csi.k8s.io
+  name: image.csi.k8s.juju.is
 spec:
   attachRequired: false
-  podInfoOnMount: true
+  podInfoOnMount: false
   volumeLifecycleModes:
   - Ephemeral
